# openadmin-py

./: .gitignore  Makefile  README.md  REUSE.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
.github/actions/branch-name/: action.yml
.github/actions/dependency-cves/: action.yml
.github/actions/format/: action.yml
.github/actions/license/: action.yml
.github/actions/lint/: action.yml
.github/actions/security/: action.yml
.github/actions/spell-check/: action.yml
.github/actions/test/: action.yml
.github/actions/typecheck/: action.yml
.github/actions/unused-code/: action.yml
.github/workflows/: ci.yml  publish.yml
examples/: activity_log.py  audit_log.py  comments.py  database.py  example.py  health.py  main.py  media.py  models.py  posts.py  roles.py  seed.py  settings.py  user.py  user_analytics.py  users.py
examples/admin/: analytics.py  authors.py  books.py  genres.py  health.py  overview.py  publishers.py  reports.py  tags.py
examples/fastapi/: admin_docs.py  database.sqlite.license  main.py  users.py
examples/fastapi/docs/: Refund Policy.md  Users Types.md
examples/lib/: database.py  lifespan.py  seed.py
examples/routes/: analytics.py  users.py  welcome_admin.py
openadmin/docs/: __init__.py  page_plugin.py
openadmin/fastapi/: __init__.py  admin_page.py  admin_panel.py  deps.py  page.py  panel.py  types.py  utils.py
openadmin/fastapi/types/: __init__.py  action.py  area_chart.py  bar_chart.py  form.py  line_chart.py  markdown.py  page_protocol.py  pagination_params.py  pie_chart.py  section.py  stat.py  table.py
openadmin/plugins/: __init__.py  page.py  panel_protocol.py  plugin.py  plugin_abc.py
openadmin/redis/: __init__.py  plaugin.py
openadmin/spec/: __init__.py  area_chart.py  component.py  page.py  section.py  spec.py  stat.py  table.py
openadmin/spec/components/: __init__.py  action.py  area_chart.py  bar_chart.py  form.py  http_methods.py  line_chart.py  markdown.py  pie_chart.py  property.py  property_type.py  stat.py  table.py
openadmin/sqlalchemy/: __init__.py  page_plugin.py  panel_plugin.py  state.py  types.py
openadmin/types/: __init__.py  actions.py  charts.py  params.py  stats.py  tables.py
tests/: test_hello.py
