[project]
name = "openadmin-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["."]
exclude = ["**/__pycache__", ".venv", ".ruff_cache", "**/.*"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["E", "F", "I"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "faker>=40.21.0",
    "greenlet>=3.5.1",
    "sqlalchemy>=2.0.50",
]
